name:                iter-sched
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/da-x/iter-sched#readme
license:             BSD3
license-file:        LICENSE
author:              Dan Aloni
maintainer:          alonid@gmail.com
copyright:           2016 Dan Aloni
category:            Console
build-type:          Simple
cabal-version:       >=1.10

executable iter-sched
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers >= 0.5.6.2
                     , regex-tdfa
                     , regex-tdfa-text
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/da-x/iter-sched
